--- a/styles.css
+++ b/styles.css
@@ -198,9 +198,9 @@ body {
     bottom: 0;
     background: linear-gradient(
         135deg,
-        rgba(27, 94, 32, 0.65) 0%,
-        rgba(45, 122, 79, 0.60) 50%,
-        rgba(25, 118, 210, 0.55) 100%
+        rgba(0, 104, 7, 0.80) 30%,
+        rgba(3, 167, 74, 0.8) 60%,
+        rgba(23, 134, 244, 0.55) 100%
     );
 }
 
@@ -692,6 +692,10 @@ body {
     height: 100%;
     object-fit: cover;
     object-position: center top;
+}
+
+.team-photo img.zoomed {
+    transform: scale(1.2);
 }
 
 .team-name {
